[package]
name = "sway-inactive-window-transparency"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
tokio = { version = "1.20.0", features = ["full"] }
tokio-i3ipc = "0.15.0"
tokio-stream = "0.1.9"
