[package]
name = "sway-inactive-window-transparency"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
ctrlc = "3.2.2"
stopper = "0.2.0"
tokio = { version = "1.20.0", features = ["full"] }
tokio-i3ipc = { git = "https://github.com/skystar-p/tokio-i3ipc", branch = "master", features = ["sway"] }
tokio-stream = "0.1.9"
tracing = "0.1.35"
tracing-subscriber = "0.3.14"
